# backend-recruit-assest-app

./: LICENSE  Makefile  README.md  abid_cv.txt  abid_project.txt  docker-compose.dev.yml  payload.json  pyproject.toml  requirements.txt  test_project.txt  test_project_john.txt
alembic/: env.py
alembic/versions/: 2cfcf02c0c17_change_job_template_id_to_string.py  6a6fb729b4a4_update_data_type_of_detailed_scores.py  89fa120541a9_initial_migration_create_tables.py  93663cf224f6_rename_strength_to_strengths_in_.py  a56209ed05de_update_data_type_experience_years.py
app/: config.py  database.py  main.py
app/api/: dependencies.py
app/api/routes/: evaluate.py  result.py  upload.py
app/models/: evaluation.py
app/services/: ai_pipeline.py  evaluation.py  file_processor.py  vector_store.py
app/tasks/: celery_tasks.py
app/utils/: logger.py
chroma_db/: chroma.sqlite3
public/: test_cv.txt
