[project]
name = "backend-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "chromadb>=1.1.0",
    "fastapi[standard]>=0.117.1",
    "loguru>=0.7.3",
    "mistralai>=1.9.10",
    "openai>=1.109.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "redis>=6.4.0",
    "ruff>=0.13.1",
    "sqlmodel>=0.0.25",
    "tavily-python>=0.7.12",
    "uvicorn>=0.37.0",
]
